# fastapi_db_pool

./: .gitignore  pyproject.toml  readme.md
src/fastapi_sqlalchemy/: .env  connection_pool.py  database.py  main.py  settings.py
src/fastapi_sqlalchemy/routers/user/: models.py  serializer.py  view.py
